--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT/Apache-2.0"
 # cli core
 clap = { version = "3.0.14", features = ["derive"] }
 thiserror = "1.0.30"
-wasm-bindgen-cli-support = "0.2.83"
+wasm-bindgen-cli-support = "0.2.84"
 colored = "2.0.0"
 
 # features
@@ -76,13 +76,13 @@ ctrlc = "3.2.3"
 # dioxus-rsx = "0.0.1"
 gitignore = "1.0.7"
 
-dioxus-rsx = { path = "../../dioxus/packages/rsx" }
-dioxus-html = { path = "../../dioxus/packages/html", features = [
+dioxus-rsx = { path = "../dioxus/packages/rsx" }
+dioxus-html = { path = "../dioxus/packages/html", features = [
     "hot-reload-context",
 ] }
-dioxus-core = { path = "../../dioxus/packages/core", features = ["serialize"] }
-dioxus-autofmt = { path = "../../dioxus/packages/autofmt" }
-rsx-rosetta = { path = "../../dioxus/packages/rsx-rosetta" }
+dioxus-core = { path = "../dioxus/packages/core", features = ["serialize"] }
+dioxus-autofmt = { path = "../dioxus/packages/autofmt" }
+rsx-rosetta = { path = "../dioxus/packages/rsx-rosetta" }
 
 # dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus" }
 # dioxus-html = { git = "https://github.com/DioxusLabs/dioxus", features = [
